# chineseocr_lite

./: .gitignore  Dockerfile  README.md  app.py  config.py  flask_app.py  main.py  model.py  pyproject.toml  requirements.txt  utils.py
ChOcrLiteAndroidDBNet/: .gitignore  README.md  settings.gradle
ChOcrLiteAndroidOnnx/: README.md  (+1 more)
android_projects/ChOcrLiteAndroidOnnx/OcrLibrary/src/main/cpp/: AngleNet.cpp  BitmapUtils.cpp  CMakeLists.txt  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrResultUtils.cpp  OcrUtils.cpp  main.cpp
android_projects/ChOcrLiteAndroidOnnx/OcrLibrary/src/main/cpp/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h
android_projects/OcrLiteAndroidMNN/OcrLibrary/src/main/cpp/: CMakeLists.txt
android_projects/OcrLiteAndroidMNN/OcrLibrary/src/main/cpp/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrUtils.h
android_projects/OcrLiteAndroidMNN/OcrLibrary/src/main/cpp/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrUtils.cpp  main.cpp
android_projects/OcrLiteAndroidNcnn/OcrLibrary/src/main/cpp/: CMakeLists.txt
android_projects/OcrLiteAndroidNcnn/OcrLibrary/src/main/cpp/include/: AngleNet.h  BitmapUtils.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h
android_projects/OcrLiteAndroidNcnn/OcrLibrary/src/main/cpp/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrUtils.cpp  main.cpp
android_projects/OcrLiteAndroidOnnx/OcrLibrary/src/main/cpp/: CMakeLists.txt
android_projects/OcrLiteAndroidOnnx/OcrLibrary/src/main/cpp/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h
android_projects/OcrLiteAndroidOnnx/OcrLibrary/src/main/cpp/src/: AngleNet.cpp  BitmapUtils.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrResultUtils.cpp  OcrUtils.cpp  main.cpp
cpp_projects/OcrLiteMnn/: CMakeLists.txt  README.md  build.bat  build.sh  generate-vs-project.bat  run-benchmark.bat  run-benchmark.sh  run-test.bat  run-test.sh  valgrind-memcheck.sh  valgrind-memcheck.txt
cpp_projects/OcrLiteMnn/benchmark/: benchmark.cpp
cpp_projects/OcrLiteMnn/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrUtils.h  main.h
cpp_projects/OcrLiteMnn/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrUtils.cpp  main.cpp
cpp_projects/OcrLiteNcnn/: .gitignore  BUILD.md  CMakeLists.txt  README.md  build-default.bat  build-default.sh  build.bat  build.sh  generate-vs-project.bat  run-benchmark.bat  run-benchmark.sh  run-test.bat  run-test.sh  valgrind-memcheck.sh  valgrind-memcheck.txt
cpp_projects/OcrLiteNcnn/benchmark/: benchmark.cpp
cpp_projects/OcrLiteNcnn/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteCaller.h  OcrUtils.h  main.h  version.h
cpp_projects/OcrLiteNcnn/ncnn-static/: NcnnWrapperConfig.cmake
cpp_projects/OcrLiteNcnn/opencv-static/: OpenCVWrapperConfig.cmake
cpp_projects/OcrLiteNcnn/scripts/: build-ncnn-nmake.bat  build-ncnn.sh  install-vulkan-linux.sh
cpp_projects/OcrLiteNcnn/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteCaller.cpp  OcrLiteJni.cpp  OcrUtils.cpp  clipper.cpp  getopt.cpp  main.cpp
cpp_projects/OcrLiteOnnx/: .gitignore  BUILD.md  CMakeLists.txt  README.md  build-default.bat  build-default.sh  build.bat  build.sh  generate-vs-project.bat  run-benchmark.bat  run-benchmark.sh  run-test.bat  run-test.sh  valgrind-massif.sh  valgrind-memcheck.sh  valgrind-memcheck.txt
cpp_projects/OcrLiteOnnx/benchmark/: benchmark.cpp
cpp_projects/OcrLiteOnnx/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteCaller.h  OcrUtils.h  version.h
cpp_projects/OcrLiteOnnx/onnxruntime-static/: OnnxRuntimeWrapper.cmake
cpp_projects/OcrLiteOnnx/scripts/: build-onnxruntime.bat  build-opencv3.sh
cpp_projects/OcrLiteOnnx/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteCaller.cpp  OcrLiteJni.cpp  OcrResultUtils.cpp  OcrUtils.cpp  getopt.cpp  main.cpp
mnn_project/crnn/: CMakeLists.txt  main.cpp
mnn_project/crnn/MNN/include/MNN/: AutoTime.hpp  ErrorCode.hpp  ImageProcess.hpp  Interpreter.hpp  MNNDefine.h  MNNForwardType.h  Matrix.h  Tensor.hpp  revertMNNModel.hpp
mnn_project/crnn/MNN/include/MNN/expr/: Expr.hpp  ExprCreator.hpp  MathOp.hpp  NeuralNetWorkOp.hpp  Optimizer.hpp
ncnn_android_projects/android_demo/app/src/main/cpp/: CMakeLists.txt  RRLib.h  ocr.cpp  psenet_lite_mbv2.id.h
ncnn_android_projects/android_demo/app/src/main/cpp/include/: keys.txt
ncnn_android_projects/android_demo/app/src/main/cpp/include/ncnn/: layer_type_enum.h  platform.h
ncnn_android_projects/android_demo/app/src/main/cpp/include/opencv2/: cvconfig.h
ncnn_project/ocr/: CMakeLists.txt  CMakeSettings.json  README.md  Untitled-1  main.cpp  ocr.cpp  ocr.h
ncnn_project/ocr/include/: ZData.h  ZUtil.h  chocrlite.h  chocrlite_warning.h  ocr.h  polygon.h  precomp.h
ncnn_project/ocr/ncnn/include/ncnn/: layer_shader_type_enum.h  layer_type_enum.h  platform.h
ncnn_project/ocr/ncnn/lib/: readme.md
ncnn_project/ocr/ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
ncnn_project/ocr/src/: NCNNDBNet.cpp  RRLib.cpp  ZUtil.cpp  chocrlite.cpp  clipper.cpp  cnocrlite.cpp  main.cpp  ocr.cpp
ncnn_project/ocr/test_imgs/: 名单.tiff
ncnn_project/ocr/test_imgs/GS-07/: 身份证.tif
ncnn_project/psenet/: CMakeLists.txt  FaceDetector.h  main.cpp
ncnn_project/psenet/model/: psenet_lite_mbv2.param
ncnn_project/psenet/ncnn/include/: allocator.h  layer_type_enum.h  platform.h
ncnn_project/psenet/ncnn/lib/cmake/ncnn/: ncnn.cmake
pc_projects/OcrLiteOnnxToNcnn/: .gitignore  CMakeLists.txt  README.md  clear.sh  generate-vs-project.cmd  run-test-win.cmd  run-test.cmd  run-test.sh
pc_projects/OcrLiteOnnxToNcnn/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h  RRLib.h  main.h  version.h
pc_projects/OcrLiteOnnxToNcnn/ncnn/: NCNNConfig.cmake
pc_projects/OcrLiteOnnxToNcnn/scripts/: build-ncnn-mac.sh  build-ncnn-win.cmd
pc_projects/OcrLiteOnnxToNcnn/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteJni.cpp  OcrUtils.cpp  RRLib.cpp  getopt.cpp  main.cpp
psenet/pse/ncnn/examples/: CMakeLists.txt  psenet.cpp
(+574 files in other folders)
